--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@ body {
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
 }
 
-.root {
-    height: 100%;
+h1, h2, h3, h4, h5, h6, p, div {
+  cursor: default;
 }
