--- a/src/app/components/FieldItem/FieldItem.module.css
+++ b/src/app/components/FieldItem/FieldItem.module.css
@@ -8,3 +8,12 @@
 .fieldItem:hover {
     background-color: rgba(27, 169, 51, .7);
 }
+
+.board {
+    background-color: rgba(255, 0 ,0, .7);
+}
+
+.board:hover {
+    background-color: rgba(255, 0 ,0, 1);
+    
+}
