--- a/src/app/components/Field/Field.module.css
+++ b/src/app/components/Field/Field.module.css
@@ -1,15 +1,15 @@
 
-.fieldTitle {
+.title {
     text-align: center;
 }
 
-.test {
+.field {
     display: grid;
     grid-template-columns: 1fr 10fr;
     grid-template-rows: 1fr 10fr;
 }
 
-.laber {
+.letters {
     grid-column: 1/3;
     grid-row: 1;
 
@@ -25,7 +25,7 @@
    
 }
 
-.field {
+.map {
     grid-column: 2;
     grid-row: 2;
 
