--- a/src/app/components/WelcomingPopup/WelcomingPopup.module.css
+++ b/src/app/components/WelcomingPopup/WelcomingPopup.module.css
@@ -1,4 +1,3 @@
-
 .wrapper {
     position: fixed;
     width: 100%;
@@ -68,19 +67,33 @@
     color: red;
 }
 
-.boxCross {
-    position: absolute;
-    width: 30px;
-    top: 5px;
-    right: 10px;
-    cursor: pointer;
+
+.closeModal {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 24px;
+	height: 24px;
+	opacity: 1;
+	cursor: pointer;
+    transition: opacity ease 0.5s;
 }
 
-.boxCross:active {
-    transform: scale(0.9);
+.closeModal::before,
+.closeModal::after {
+	content: '';
+	position: absolute;
+	top: 10px;
+	display: block;
+	width: 24px;
+	height: 3px;
+	background: black;
 }
 
+.closeModal::before {
+	transform: rotate(45deg);
+}
 
-.boxCross__cross * {
-    stroke: black;
+.closeModal::after {
+	transform: rotate(-45deg);
 }
