--- a/src/app/components/FieldCell/FieldCell.module.css
+++ b/src/app/components/FieldCell/FieldCell.module.css
@@ -24,14 +24,14 @@
 
 
 .ship {
-    background-color: rgba(255, 0 ,0, .6);
+    background-color: rgba(0, 0, 255, 0.7);
+    transition: background-color .3s;
 }
 
 .ship:hover {
-    background-color: rgba(255, 0 ,0, 1);
+    background-color: rgba(0, 0 ,255, 1);
    
 }
-
 
 .closeModal {
     position: relative;
