--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -14,6 +14,15 @@
     padding: 20px;
     flex: 1 1 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.info {
+    width: 300px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
